# algorithm-shield

./: .gitignore  ARCHITECTURE.md  ECOSYSTEM.scm  LICENSE  LICENSE.txt  META.scm  README.adoc  STATE.scm  manifest.json  package-lock.json  rescript.json
docs/: COMPETITIVE-LANDSCAPE.adoc  CONTAINERIZATION-ANALYSIS.adoc  DEFENSE-LAYERS.adoc  EPHAPAX-MIGRATION-STRATEGY.adoc  EPHAPAX-PERFORMANCE.adoc  NETWORK-PROTOCOL-INTEGRATION.adoc  NETWORK-PROTOCOLS.adoc  PERSPECTIVE-SHARING-SYSTEM.adoc  POLYMORPHIC-METAMORPHIC-ANALYSIS.adoc  PROVEN-EPHAPAX-INTEGRATION.adoc  REVERSIBLE-STORAGE-INTEGRATION.adoc  ROADMAP.adoc  SEAM-ANALYSIS.adoc  SECURITY-ACCESSIBILITY-CHECKLIST.adoc  SECURITY-HEADERS-INTEGRATION.adoc  VIRAL-EVASION-TECHNIQUES.adoc
src/: background.js  content.js
src/rescript/actuator/: Actuator.res  HumanTiming.res
src/rescript/bindings/: ChromeRuntime.res  ChromeStorage.res  ChromeTabs.res  RuleEngine.res
src/rescript/lens/: Lens.res
src/rescript/membrane/: Membrane.res
src/rescript/observer/: Observer.res
src/rescript/persona/: Persona.res
src/rescript/test/: WasmIntegrationTest.res
src/rust/: Cargo.toml  lib.rs
src/rust/minikaren/: context.rs  mod.rs  rules.rs
src/rust/src/: lib.rs
src/rust/src/minikaren/: actions.rs
